<resources>
    <string name="_0_13">0,13</string>
    <string name="_100_109_db">100-109 dB</string>
    <string name="_100_db_exposure_limit_24_minutes_7_days">100 dB exposure limit: 24 minutes/ 7 days</string>
    <string name="_10392">10392</string>
    <string name="_110_119_db">110-119 dB</string>
    <string name="_110_db_exposure_limit_4_minutes_7_days">110 dB exposure limit: 4 minutes/ 7 days</string>
    <string name="_1293">1293</string>
    <string name="_12_09_2022_12_30">12.09.2022, 12:30</string>
    <string name="_1_18">1,18</string>
    <string name="_30_39_db">30-39 dB</string>
    <string name="_40_49_db">40-49 dB</string>
    <string name="_50_59_db">50-59 dB</string>
    <string name="_60_69_db">60-69 dB</string>
    <string name="_65">65</string>
    <string name="_67_db">67 DB</string>
    <string name="_70_79_db">70-79 dB</string>
    <string name="_75_db_exposure_limit_127_hours_7_days">75 dB exposure limit: 127 hours/ 7 days</string>
    <string name="_80_89_db">80-89 dB</string>
    <string name="_80_db_exposure_limit_40_hours_7_days">80 dB exposure limit: 40 hours/ 7 days</string>
    <string name="_90_99_db">90-99 dB</string>
    <string name="_90_db_exposure_limit_4_hours_7_days">90 dB exposure limit: 4 hours/ 7 days</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="alert_title">Silencio</string>
    <string name="all_files">All Files</string>
    <string name="all_images">All Images</string>
    <string name="all_photos">All Photos</string>
    <string name="all_videos">All Videos</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_selected_max_items">Already selected max items</string>
    <string name="ambulance_siren">Ambulance Siren</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animals">Animals</string>
    <string name="app_name">Silencio</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appliances">Appliances</string>
    <string name="ask_silencio">Ask Silencio</string>
    <string name="attachments_num">%d</string>
    <string name="attachments_title_text">(%d/%d)</string>
    <string name="audio_focus_alert_message">Ooops!! It seems Silencio cannot capture the current dBA level, please try again later!</string>
    <string name="average">Average</string>
    <string name="avg">AVG</string>
    <string name="avg_db">avg dBA</string>
    <string name="bar">Bar</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btnCancel">CANCEL</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera">Camera</string>
    <string name="camera_audio_permission_rational">Camera and/or Microphone permissions are not granted. Please allow it from setting.</string>
    <string name="camera_audio_storage_permission_rational">Camera, Microphone and/or Storage permissions are not granted. Please allow it from setting.</string>
    <string name="camera_permission_rational">Camera permission is not granted. Please allow it from setting.</string>
    <string name="camera_storage_permission_rational">Camera and/or Storage permissions are not granted. Please allow it from setting.</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_recording_popup">Are you sure you want to end the measurement? You will not gain any coins if you leave without completing the measurement.</string>
    <string name="centric_spaces">Centric spaces</string>
    <string name="certificateautorityisnottrusted">The certificate authority is not trusted.</string>
    <string name="certificatehostnamemismatch">The certificate Hostname mismatch.</string>
    <string name="change_password">Change password</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_password">Choose Password</string>
    <string name="chris_lavin">Chris Lavin</string>
    <string name="claim_your_coin">Claim your coin</string>
    <string name="claim_your_coins">Claim your coins</string>
    <string name="clear_search_button_content_description">Clear search</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="code">Code</string>
    <string name="code_dialog_text_1">Simply obtain an invite code from a network member. If you don\'t have one, no worries – you can hit skip!</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">0ad279cb1dbe428696da9ab6042a27dc</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="continue_1">Continue</string>
    <string name="create_account_subtitle">To use Silencio, you must provide your full name and select a username. Please remember that your username will be public and cannot be changed later.</string>
    <string name="create_your_account">Create your account</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="do_not_show_me_again">Do not show me again</string>
    <string name="email">Email address</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_username">Enter username</string>
    <string name="exchange">Exchange</string>
    <string name="exchange_subtext">Use NOISE to purchase goods &amp; services, or donate to a good cause!</string>
    <string name="first_name">First name</string>
    <string name="forgot_password_1">Forgot password</string>
    <string name="get_code">Get code</string>
    <string name="get_code_with_phone">Get code with phone number</string>
    <string name="hold">Hold</string>
    <string name="hold_subtext">In the near future NOISE will have its initial coin offering, and wil be transferable to other crypto assets. This means you can get paid money in form of Fiat Currency.</string>
    <string name="how_to_measure">How to measure?</string>
    <string name="how_to_measure_steps">1. Do not talk directly over the phone\102. Do not measure with your phone covered. Keep it out in the air.\103. Longer measurements are always better\104. Have fun!</string>
    <string name="last_name">Last name</string>
    <string name="measuring_tips_from_our_scientists_enda_and_eoin">Measuring tips from our scientists Enda and Eoin</string>
    <string name="please_specify_your_email_in_order_to_get_code">Please specify your email address in order to get code</string>
    <string name="t_and_c">I accept terms &amp; conditions</string>
    <string name="username">Username</string>
    <string name="visit_silencio_academy">Visit Silencio Academy</string>
    <string name="we_filter_out_anomalies_to_prevent_un_relevant_data_from_impacting_out_data_sets">We filter out measurement anomalies to avoid tampering the data set</string>
    <string name="what_is_a_noise_coin">What is a Noise Coin?</string>
    <string name="what_is_a_noise_coin_subtext">NOISE Coins can be earned either through referrals, or by completing measurements. This is a Silencio native token, that has various use cases!</string>
</resources>