<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_crop_image_menu_rotate_left" android:id="@+id/crop_image_menu_rotate_left" android:visible="false" android:title="@string/crop_image_menu_rotate_left" sweet:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_crop_image_menu_rotate_right" android:id="@+id/crop_image_menu_rotate_right" android:title="@string/crop_image_menu_rotate_right" sweet:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_crop_image_menu_flip" android:id="@+id/crop_image_menu_flip" android:title="@string/crop_image_menu_flip" sweet:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/crop_image_menu_flip_horizontally" android:title="@string/crop_image_menu_flip_horizontally"/>
            <item android:id="@+id/crop_image_menu_flip_vertically" android:title="@string/crop_image_menu_flip_vertically"/>
        </menu>
    </item>
    <item android:icon="@drawable/ic_done_white" android:id="@+id/crop_image_menu_crop" android:title="@string/crop_image_menu_crop" sweet:showAsAction="always"/>
</menu>
