<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/bottom_sheet_create_account_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="24dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/imageView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:src="@mipmap/ic_launcher_foreground" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/btn_close_create_account" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:src="@drawable/ic_close" android:layout_marginEnd="16dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintTop_toTopOf="0"/>
        <TextView android:textStyle="bold" android:id="@+id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_your_account" sweet:layout_constraintEnd_toEndOf="@+id/imageView5" sweet:layout_constraintStart_toStartOf="@+id/imageView5" sweet:layout_constraintTop_toBottomOf="@+id/imageView5" style="@style/Custom_Text_DM_Sans_Medium"/>
        <TextView android:id="@+id/textView11" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:text="@string/create_account_subtitle" android:textAlignment="textStart" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:lineHeight="28sp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView9" style="@style/Custom_Text_DM_Sans_Medium"/>
        <TextView android:textSize="12sp" android:textColor="@color/light_grey" android:id="@+id/textView15" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="21dp" android:text="@string/first_name" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView11"/>
        <EditText android:id="@+id/et_first_name" android:tag="binding_1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:hint="@string/enter_first_name" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView15" style="@style/Custom_Edit_Text"/>
        <TextView android:textSize="12sp" android:textColor="@color/light_grey" android:id="@+id/textView16" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/last_name" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/et_first_name"/>
        <EditText android:id="@+id/et_last_name" android:tag="binding_2" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:hint="@string/enter_last_name" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView16" style="@style/Custom_Edit_Text"/>
        <TextView android:textSize="12sp" android:textColor="@color/light_grey" android:id="@+id/textView17" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/username" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/et_last_name"/>
        <EditText android:id="@+id/et_nick_name" android:tag="binding_3" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:hint="@string/enter_username" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView17" style="@style/Custom_Edit_Text"/>
        <RadioButton android:textColorLink="@color/color_primary" android:linksClickable="true" android:id="@+id/t_n_c_radio_btn" android:tag="binding_4" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:buttonTint="@color/color_primary" sweet:layout_constraintStart_toStartOf="@+id/et_nick_name" sweet:layout_constraintTop_toBottomOf="@+id/et_nick_name"/>
        <TextView android:textColorLink="@color/color_primary" android:id="@+id/tv_tnc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/t_and_c" sweet:layout_constraintBottom_toBottomOf="@+id/t_n_c_radio_btn" sweet:layout_constraintStart_toEndOf="@+id/t_n_c_radio_btn" sweet:layout_constraintTop_toTopOf="@+id/t_n_c_radio_btn" style="@style/Custom_Text_Work_Sans_Small"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/btn_create_account_continue" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/continue_1" sweet:cornerRadius="30dp" sweet:layout_constraintEnd_toEndOf="@+id/et_nick_name" sweet:layout_constraintStart_toStartOf="@+id/et_nick_name" sweet:layout_constraintTop_toBottomOf="@+id/t_n_c_radio_btn" style="@style/Custom_Button_Style"/>
        <TextView android:id="@+id/already_have_account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="29dp" android:text="@string/already_have_an_account" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/btn_create_account_continue" style="@style/Custom_Text_Work_Sans_Small"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
