<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/bottom_sheet_ask_silencio_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="32dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/btn_close" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:src="@drawable/ic_close" android:layout_marginEnd="16dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black_shade_293E4C" android:id="@+id/textView24" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/what_is_a_noise_coin" android:fontFamily="@font/dm_sans_bold" android:layout_marginStart="32dp" sweet:layout_constraintEnd_toStartOf="@+id/btn_close" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toTopOf="0"/>
        <TextView android:textSize="15sp" android:textColor="@color/text_color" android:id="@+id/textView25" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/what_is_a_noise_coin_subtext" android:fontFamily="@font/dm_sans_regular" android:layout_marginEnd="32dp" android:lineHeight="23sp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="@+id/textView24" sweet:layout_constraintTop_toBottomOf="@+id/textView24"/>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black_shade_293E4C" android:id="@+id/textView26" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/exchange" android:fontFamily="@font/dm_sans_bold" android:layout_marginStart="32dp" sweet:layout_constraintEnd_toEndOf="@+id/textView25" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView25"/>
        <TextView android:textSize="15sp" android:textColor="@color/text_color" android:id="@+id/textView27" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/exchange_subtext" android:fontFamily="@font/dm_sans_regular" android:layout_marginEnd="32dp" android:lineHeight="23sp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="@+id/textView24" sweet:layout_constraintTop_toBottomOf="@+id/textView26"/>
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/black_shade_293E4C" android:id="@+id/textView28" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/hold" android:fontFamily="@font/dm_sans_bold" android:layout_marginStart="32dp" sweet:layout_constraintEnd_toEndOf="@+id/textView25" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView27"/>
        <TextView android:textSize="15sp" android:textColor="@color/text_color" android:id="@+id/textView29" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/hold_subtext" android:fontFamily="@font/dm_sans_regular" android:layout_marginEnd="32dp" android:lineHeight="23sp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="@+id/textView24" sweet:layout_constraintTop_toBottomOf="@+id/textView28"/>
        <TextView android:textSize="12sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@+id/radioButton2" android:tag="binding_1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/do_not_show_me_again" android:drawablePadding="16dp" android:drawableStart="@drawable/ic_checkbox_unselected" android:fontFamily="@font/poppins_medium" sweet:layout_constraintEnd_toEndOf="@+id/textView29" sweet:layout_constraintStart_toStartOf="@+id/textView29" sweet:layout_constraintTop_toBottomOf="@+id/textView29"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/ask_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/continue_1" sweet:cornerRadius="30dp" sweet:layout_constraintEnd_toEndOf="@+id/radioButton2" sweet:layout_constraintStart_toStartOf="@+id/radioButton2" sweet:layout_constraintTop_toBottomOf="@+id/radioButton2" style="@style/Custom_Button_Style"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
