<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/bottom_sheet_how_to_measure_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="30dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/btn_close" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:src="@drawable/ic_close" android:layout_marginEnd="16dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintTop_toTopOf="0"/>
        <TextView android:textStyle="bold" android:id="@+id/textView29" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/how_to_measure" android:fontFamily="@font/dm_sans_bold" android:layout_marginStart="32dp" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toTopOf="@+id/btn_close" style="@style/Custom_Text_DM_Sans_Medium"/>
        <TextView android:textSize="12sp" android:textColor="@color/black_shade_293E4C" android:id="@+id/textView31" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/measuring_tips_from_our_scientists_enda_and_eoin" android:fontFamily="@font/poppins_medium" android:layout_marginEnd="32dp" android:lineHeight="15sp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="@+id/textView29" sweet:layout_constraintTop_toBottomOf="@+id/textView29"/>
        <TextView android:textColor="@color/black_shade_293E4C" android:id="@+id/textView36" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/how_to_measure_steps" android:fontFamily="@font/dm_sans_regular" android:lineHeight="20sp" sweet:layout_constraintEnd_toEndOf="@+id/textView31" sweet:layout_constraintStart_toStartOf="@+id/textView31" sweet:layout_constraintTop_toBottomOf="@+id/textView31" style="@style/Custom_Text_DM_Sans_Small"/>
        <TextView android:textSize="12sp" android:textColor="@color/black" android:id="@+id/textView37" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/we_filter_out_anomalies_to_prevent_un_relevant_data_from_impacting_out_data_sets" android:fontFamily="@font/poppins_semi_bold" android:lineHeight="20sp" sweet:layout_constraintEnd_toEndOf="@+id/textView36" sweet:layout_constraintStart_toStartOf="@+id/textView36" sweet:layout_constraintTop_toBottomOf="@+id/textView36"/>
        <TextView android:textSize="12sp" android:textColor="@color/black_shade_293E4C" android:gravity="center_vertical" android:id="@+id/radioButton" android:tag="binding_1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/do_not_show_me_again" android:drawablePadding="16dp" android:fontFamily="@font/poppins_medium" sweet:drawableStartCompat="@drawable/ic_checkbox_unselected" sweet:layout_constraintEnd_toEndOf="@+id/textView37" sweet:layout_constraintStart_toStartOf="@+id/textView37" sweet:layout_constraintTop_toBottomOf="@+id/textView37"/>
        <com.google.android.material.button.MaterialButton android:textSize="20sp" android:id="@+id/btn_how_to_visit_academy" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/visit_silencio_academy" android:includeFontPadding="true" android:layout_marginStart="56dp" android:layout_marginEnd="56dp" android:paddingVertical="12dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/radioButton" sweet:strokeColor="@color/color_primary" style="@style/Widget.Material3.Button.OutlinedButton"/>
        <com.google.android.material.button.MaterialButton android:textSize="20sp" android:id="@+id/btn_how_to_continue" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/continue_1" android:includeFontPadding="true" android:layout_marginStart="56dp" android:layout_marginEnd="56dp" android:paddingVertical="12dp" sweet:cornerRadius="30dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/btn_how_to_visit_academy" sweet:strokeColor="@color/color_primary" style="@style/Custom_Button_Style"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
