<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:sweet="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/bottom_sheet_forgot_password_email_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingBottom="24dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/imageView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:src="@mipmap/ic_launcher_foreground" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toTopOf="0"/>
        <ImageView android:id="@+id/btn_close_forgot_password" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:src="@drawable/ic_close" android:layout_marginEnd="16dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintTop_toTopOf="0"/>
        <TextView android:textStyle="bold" android:id="@+id/textView28" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgot_password_1" sweet:layout_constraintEnd_toEndOf="@+id/imageView8" sweet:layout_constraintStart_toStartOf="@+id/imageView8" sweet:layout_constraintTop_toBottomOf="@+id/imageView8" style="@style/Custom_Text_DM_Sans_Medium"/>
        <TextView android:id="@+id/textView32" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/please_specify_your_email_in_order_to_get_code" android:textAlignment="textStart" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:lineHeight="28sp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView28" style="@style/Custom_Text_DM_Sans_Medium"/>
        <TextView android:textSize="12sp" android:textColor="@color/light_grey" android:id="@+id/textView34" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/email" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView32"/>
        <EditText android:id="@+id/et_email_forgot_password" android:tag="binding_1" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:hint="@string/enter_email" android:ems="10" android:inputType="textEmailAddress" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/textView34" style="@style/Custom_Edit_Text"/>
        <com.google.android.material.button.MaterialButton android:id="@+id/btn_get_code" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/get_code" sweet:cornerRadius="30dp" sweet:layout_constraintEnd_toEndOf="@+id/et_email_forgot_password" sweet:layout_constraintStart_toStartOf="@+id/et_email_forgot_password" sweet:layout_constraintTop_toBottomOf="@+id/et_email_forgot_password" style="@style/Custom_Button_Style"/>
        <TextView android:id="@+id/get_code_with_phone" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/get_code_with_phone" sweet:layout_constraintEnd_toEndOf="0" sweet:layout_constraintHorizontal_bias="0.5" sweet:layout_constraintStart_toStartOf="0" sweet:layout_constraintTop_toBottomOf="@+id/btn_get_code" style="@style/Custom_Text_Work_Sans_Small"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
